# Lab2_KG

./: .gitignore  CMakeLists.txt  Dockerfile  devcontainer.json  vcpkg.json
core/: main.cpp  temple.cpp
core/CFigure/: CFigure.cpp
core/CMainWindow/: CMainWindow.cpp  CMainWindow.h  CMainWindow.ui
core/CScene/: CScene.cpp  CScene.h
core/Figures/CBeziersCurve/: CBeziersCurve.cpp
core/Figures/CFigure/: CFigure.h
core/Figures/CHexagon/: CHexagon.cpp  CHexagon.h
core/Figures/CTriangle/: CTriangle.cpp  CTriangle.h
